# i2rt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.example.yaml  config.yaml  package.json  pyproject.toml  rig.example.yaml  setup.py
.github/workflows/: ci.yml  deploy-docs.yml  ruff.yml  unit_tests.yml
assets/station_mjcf/: arm.urdf  arm.xml  arm_gpt.urdf  convert.py  station.urdf  yam_env.py
devices/: FlowBase.desktop  FlowBaseGamepad.desktop  LinearRailVehicle.desktop  LinearRailVehicleGamepad.desktop  pi_setup.md  setup_flow_desktop.sh
doc/: set_persist_id_socket_can.md
docs/: hardware-checklist.md  index.md
notebooks/: vis_gripper_force_torque.ipynb
policy_serving/: README.md  pyproject.toml  setup_policy_env.sh
policy_serving/yam_policy/: __init__.py  action_chunk_broker.py  base_policy.py  image_tools.py  serve.py  websocket_client.py  websocket_server.py
policy_serving/yam_policy/policies/: __init__.py  dummy.py  lerobot_policy.py  openpi_policy.py
robot/: setup_can_ids.sh  setup_robot_env.sh  yam
scripts/: minimum_gello.py  record_gello.py  ros2_aliases.sh  setup_can_ids.sh  setup_robot_env.sh  setup_workstation_env.sh  yam
sim/: inference_mujoco_rerun.py  mujoco_rerun.py
site/: README.md  index.html  script.js  styles.css
tests/: _util.py  test_eef.py  test_pipeline.py  test_policy_serving.py  test_recorder.py  test_replay.py  test_rig_config.py  test_safety.py  test_safety_primitives.py  test_serving.py  test_sound.py  test_views.py
workstation/: __init__.py  setup_workstation_env.sh  yam-data
(+229 files in other folders)
